fix jumping fotn when page is load

--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -2,6 +2,10 @@
   --font-intro: 'Intro', sans-serif;
 }
 
+html {
+    overflow-y: scroll;
+}
+
 .mell_logo {
   font-size: 24px;
   font-family: var(--font-intro);
